* Tue Nov 06 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.4-0
- Add explicit support for Oracle Linux

* Wed Oct 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.3.4-0
- Add explicit support for Puppet 5

* Fri Oct 19 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.3.4-0
- Updated assets and fixed a setting in the acceptance test
  so test would run under puppet 5

* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 0.3.4-0
- Updated $app_pki_external_source to accept any string.  This matches the functionality
  of pki::copy.

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.3.4-0
- Drop Hiera 4 support

* Fri Jul 13 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.3
- Disable usage ping

* Thu Jun 14 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.3.2
- Update systemd fixtures and CI assets

* Tue May 15 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.3.2
- Expand the range of the augeasproviders_ssh module dependency
  to allow 3.x versions.

* Wed Mar 28 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.3.1
- Updated README to note that authorized key files need to be copied
  when upgrading from version 0.2.0.

* Wed Feb 28 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.3.0
- Drop support for CentOS 6 in order to cleanly solve an intermittent
  problem in which the GitLab local user's authorized keys lock file
  could not be created.
- Modify sshd authorized keys file configuration so that the GitLab
  installer can manage the GitLab local user's authorized keys file
  and the directory in which it resides, independent of Puppet.
  Prior to this, both the GitLab installer (via Chef) and Puppet
  were simultaneously, but independently, managing the ownership,
  permissions, and selinux contexts of that authorized keys file
  and its directory.  Since the desired settings for the directory
  were different, intermittent problems such as the GitLab user